force-app/main/default/objects/UPP_Notifications_Preferences__c/UPP_Notifications_Preferences__c.object-meta.xml
<CustomObject>
    <label>UPP Notifications Preferences</label>
    <nameField>
        <label>UPP Notifications Preferences Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>UPP Notifications Preferences</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>