force-app/main/default/objects/UPP_Notifications_Preferences__c/fields/Deliver_message_by_email__c.field-meta.xml
<CustomField>
    <fullName>Deliver_message_by_email__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Deliver message by email</label>
    <type>Checkbox</type>
</CustomField>