force-app/main/default/objects/UPP_Notifications_Preferences__c/fields/Preferences__c.field-meta.xml
<CustomField>
    <fullName>Preferences__c</fullName>
    <label>Preferences</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Missed Pickup Appointment</fullName>
            </value>
            <value>
                <fullName>New Price Announcement</fullName>
            </value>
            <value>
                <fullName>Past Due Shipment</fullName>
            </value>
            <value>
                <fullName>Scheduled Ship Date Change</fullName>
            </value>
            <value>
                <fullName>Sales Incentive Credit Message</fullName>
            </value>
            <value>
                <fullName>New Statement</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>