force-app/main/default/objects/UPP_Notifications_Preferences__c/fields/Records_per_page__c.field-meta.xml
<CustomField>
    <fullName>Records_per_page__c</fullName>
    <defaultValue>10</defaultValue>
    <label>Records per page</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>