force-app/main/default/objects/UPP_Notifications_Preferences__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Preferences__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>